@@ -20,7 +20,7 @@ AC_PROG_LN_S
 AC_PROG_MAKE_SET
 
 dnl Checks for libraries.
-AM_PATH_GTK(1.1.5)
+AM_PATH_GTK(1.1.13)
 
 dnl Checks for dynamic linking
 
