@@ -1,3 +1,12 @@
+1999-01-19  Alexander Larsson  <alla@lysator.liu.se>
+
+	* configure.in:
+	Updated gtk requirement to Gtk+ 1.1.13.
+
+	* app/display.c:
+	Always add one screenful of scrolling space on
+	each side of a diagram window.
+
 1999-01-19  Jeff Garzik  <jgarzik@pobox.com>
 
 	* autogen.sh:
